# vibe-tts

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: ws_client.py  ws_client_pipe.py
vibe_tts/: __init__.py  cli.py  config.py  exceptions.py  model.py  playback.py  script_parser.py  synthesis.py  voices.py
vibe_tts/server/: __init__.py  app.py  audio_utils.py  dependencies.py  middleware.py  routes.py  schemas.py  websocket.py
